[package]
name = "rs-sampler"
version = "0.1.0"
edition = "2021"

[dependencies]
num-traits = "0.2.19"
anyhow = "1.0.93"
rand = "0.8"
rayon = "1.10.0"
image = "0.25.5"
itertools = "0.13.0"

# git
del-geo-core = { git = "https://github.com/nobuyuki83/del-geo.git"}
del-raycast-core = { git = "https://github.com/nobuyuki83/del-raycast.git"}

[dev-dependencies]
